--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
   },
   "devDependencies": {
     "babel-core": "6.7.6",
+    "babel-eslint": "^6.0.2",
     "babel-preset-es2015": "6.6.0",
-    "babel-preset-stage-0": "6.5.0"
+    "babel-preset-stage-0": "6.5.0",
+    "eslint": "^2.7.0",
+    "eslint-config-airbnb": "^7.0.0",
+    "eslint-plugin-jsx-a11y": "^0.6.2",
+    "eslint-plugin-react": "^4.3.0"
   }
 }
